--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,41 +1,20 @@
-worker_processes 1;
-events { worker_connections 1024; }
-
-http {
-  include       mime.types;
-  default_type  application/octet-stream;
-
-  upstream backend_up {
-    # explicit backend replicas defined in docker-compose
-    server backend1:8000;
-    server backend2:8000;
-    server backend3:8000;
-  }
-
-  server {
+server {
     listen 80;
 
-    # serve static frontend
+    # Servir o frontend
     root /usr/share/nginx/html;
     index index.html;
 
+    # Redirecionar paths desconhecidos para o index.html (React)
     location / {
-      try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
-    # proxy API calls to backend upstream
+    # Proxy para o backend FastAPI
     location /api/ {
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_pass http://backend_up/;
-      proxy_connect_timeout 1s;
-      proxy_read_timeout 10s;
+        proxy_pass http://list-backend:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-
-    # health for load-balancer check
-    location /health {
-      proxy_pass http://backend_up/health;
-    }
-  }
 }
