--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,17 @@
-# Construção do frontend
-FROM node:20-alpine AS build
+# Etapa 1 — Builder
+FROM node:18-alpine AS builder
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
 RUN npm run build
 
-# Servindo arquivos estáticos com Nginx
+# Etapa 2 — Nginx
 FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
+# Fim do Dockerfile
