--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,8 @@
-version: "3.8"
 
 services:
   postgres:
     image: postgres:15-alpine
-    container_name: list-postgres
+    container_name: db-postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
@@ -11,9 +10,14 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5643:5643"
     networks:
       - todo-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
   backend:
     build:
@@ -23,7 +27,8 @@ services:
       DATABASE_URL: "postgresql+asyncpg://postgres:123@postgres:5432/notasdb"
       SECRET_KEY: "supersecretkey"
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     ports:
       - "8000:8000"
     networks:
@@ -33,8 +38,6 @@ services:
     build:
       context: ./frontend
     container_name: list-frontend
-    depends_on:
-      - backend
     networks:
       - todo-net
 
@@ -45,7 +48,9 @@ services:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/dist:/usr/share/nginx/html
     depends_on:
+      - backend
       - frontend
     networks:
       - todo-net
