--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,19 @@
-# Etapa 1 — Builder
-FROM node:18-alpine AS builder
+FROM node:18 AS build
+
 WORKDIR /app
 
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
+
 RUN npm run build
 
-# Etapa 2 — Nginx
 FROM nginx:alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
+
+COPY --from=build /app/dist /usr/share/nginx/html
 
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
-# Fim do Dockerfile
