--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,26 @@
 server {
     listen 80;
+    server_name localhost;
 
-    # Servir o frontend
     root /usr/share/nginx/html;
-    index index.html;
 
-    # Redirecionar paths desconhecidos para o index.html (React)
-    location / {
-        try_files $uri /index.html;
+    # SERVE arquivos estáticos corretamente
+    location /assets/ {
+        alias /usr/share/nginx/html/assets/;
+        try_files $uri =404;
     }
 
-    # Proxy para o backend FastAPI
+    # API - encaminha para o backend
     location /api/ {
-        proxy_pass http://list-backend:8000/;
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # SPA fallback
+    location / {
+        try_files $uri /index.html;
     }
 }
