--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,13 +3,13 @@ server {
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index index.html;
+    index home.html;
 
     # --------------------------
     # Servir o Frontend (React)
     # --------------------------
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /home.html;
     }
 
     # --------------------------
