--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,13 +3,13 @@ server {
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index home.html;
+    index index.html;
 
     # --------------------------
-    # Servir o Frontend (React)
+    # Servir o Frontend (HTML+CSS+JS)
     # --------------------------
     location / {
-        try_files $uri $uri/ /home.html;
+        try_files $uri $uri/ /index.html;
     }
 
     # --------------------------
