--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,8 @@ services:
     environment:
       DATABASE_URL: "postgresql+asyncpg://postgres:123@postgres:5432/notasdb"
       SECRET_KEY: "supersecretkey"
+      HOST: "0.0.0.0"
+      PORT: "8000"
     depends_on:
       postgres:
         condition: service_healthy
@@ -34,9 +36,9 @@ services:
     networks:
       - todo-net
 
-  frontend:
-    build: ./frontend    
-    container_name: list-frontend
+  # frontend:
+  #   build: ./frontend    
+  #   container_name: list-frontend
     #ports:
       #- "80:80"
     #volumes:
@@ -44,11 +46,11 @@ services:
       #- ./frontend:/usr/share/nginx/html
       # Configuração do nginx
       #- ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - backend
-      - postgres
-    networks:
-      - todo-net
+    # depends_on:
+    #   - backend
+    #   - postgres
+    # networks:
+    #   - todo-net
 
   nginx:
     image: nginx:alpine
