modified:   backend/app/db.py 	modified:   docker-compose.yaml 	modified:   nginx/default.conf

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,16 +1,24 @@
+upstream backend_servers {
+    #ip_hash;  
+    #least_conn;  
+    server backend1:8000;
+    server backend2:8000;
+    server backend3:8000;
+}
+
 server {
     listen 80;
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index login.html;
+    index dashboard.html;
 
     location / {
-        try_files $uri $uri/ /login.html;
+        try_files $uri $uri/ /dashboard.html;
     }
 
     location /api/ {
-        proxy_pass http://backend:8000/;
+        proxy_pass http://backend_servers/;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
