--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,10 +18,10 @@ services:
       timeout: 3s
       retries: 5
 
-  backend:
+  backend1:
     build:
       context: ./backend
-    container_name: list-backend
+    container_name: backend1
     environment:
       DATABASE_URL: "postgresql+asyncpg://postgres:123@postgres:5432/notasdb"
       SECRET_KEY: "supersecretkey"
@@ -30,8 +30,36 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    ports:
-      - "8000:8000"
+    networks:
+      - todo-net
+
+  backend2:
+    build:
+      context: ./backend
+    container_name: backend2
+    environment:
+      DATABASE_URL: "postgresql+asyncpg://postgres:123@postgres:5432/notasdb"
+      SECRET_KEY: "supersecretkey"
+      HOST: "0.0.0.0"
+      PORT: "8000"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - todo-net
+
+  backend3:
+    build:
+      context: ./backend
+    container_name: backend3
+    environment:
+      DATABASE_URL: "postgresql+asyncpg://postgres:123@postgres:5432/notasdb"
+      SECRET_KEY: "supersecretkey"
+      HOST: "0.0.0.0"
+      PORT: "8000"
+    depends_on:
+      postgres:
+        condition: service_healthy
     networks:
       - todo-net
 
@@ -44,7 +72,9 @@ services:
       - ./frontend:/usr/share/nginx/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - backend
+      - backend1
+      - backend2
+      - backend3
     networks:
       - todo-net
 
