--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,13 +2,20 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY backend/app /app
-COPY backend/requirements.txt /app/requirements.txt
-
-RUN pip install --no-cache-dir -r /app/requirements.txt
+ENV PYTHONDONTWRITEBYTECODE=1
 
 ENV PYTHONUNBUFFERED=1
-ENV DATABASE_URL=postgresql://postgres:postgres@db:5432/todo_db
+
+# Copia requirements.txt para dentro do container
+COPY requirements.txt .
+
+# Instala dependências
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copia toda a pasta app para dentro do container
+COPY app/ ./app
 
 EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# Rodar o módulo app.main
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
