--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,41 +1,28 @@
-worker_processes 1;
-events { worker_connections 1024; }
-
-http {
-  include       mime.types;
-  default_type  application/octet-stream;
-
-  upstream backend_up {
-    # explicit backend replicas defined in docker-compose
+upstream backend_servers {
+    #ip_hash;  
+    #least_conn;  
     server backend1:8000;
     server backend2:8000;
     server backend3:8000;
-  }
+}
 
-  server {
+server {
     listen 80;
+    server_name localhost;
 
-    # serve static frontend
     root /usr/share/nginx/html;
-    index index.html;
+    index dashboard.html;
 
     location / {
-      try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /dashboard.html;
     }
 
-    # proxy API calls to backend upstream
     location /api/ {
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_pass http://backend_up/;
-      proxy_connect_timeout 1s;
-      proxy_read_timeout 10s;
-    }
+        proxy_pass http://backend_servers/;
 
-    # health for load-balancer check
-    location /health {
-      proxy_pass http://backend_up/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
-  }
 }
