--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,61 +1,76 @@
-version: "3.8"
-
 services:
-  db:
-    image: postgres:15
+  postgres:
+    image: postgres:15-alpine
+    container_name: db-postgres
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: todo_db
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: notasdb
     volumes:
       - db_data:/var/lib/postgresql/data
+    ports:
+      - "5643:5432"
     networks:
       - todo-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
   backend1:
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: ./backend
     container_name: backend1
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/todo_db
+      DATABASE_URL: "postgresql+asyncpg://postgres:123@postgres:5432/notasdb"
+      SECRET_KEY: "supersecretkey"
+      HOST: "0.0.0.0"
+      PORT: "8000"
     depends_on:
-      - db
+      postgres:
+        condition: service_healthy
     networks:
       - todo-net
 
   backend2:
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: ./backend
     container_name: backend2
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/todo_db
+      DATABASE_URL: "postgresql+asyncpg://postgres:123@postgres:5432/notasdb"
+      SECRET_KEY: "supersecretkey"
+      HOST: "0.0.0.0"
+      PORT: "8000"
     depends_on:
-      - db
+      postgres:
+        condition: service_healthy
     networks:
       - todo-net
 
   backend3:
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: ./backend
     container_name: backend3
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/todo_db
+      DATABASE_URL: "postgresql+asyncpg://postgres:123@postgres:5432/notasdb"
+      SECRET_KEY: "supersecretkey"
+      HOST: "0.0.0.0"
+      PORT: "8000"
     depends_on:
-      - db
+      postgres:
+        condition: service_healthy
     networks:
       - todo-net
 
   nginx:
-    image: nginx:stable
-    container_name: proxy
+    image: nginx:alpine
+    container_name: list-nginx
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/nginx.conf:ro
-      - ./frontend:/usr/share/nginx/html:ro
+      - ./frontend:/usr/share/nginx/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend1
       - backend2
