Change default index and redirect to login page

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,10 +11,10 @@ server {
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index dashboard.html;
+    index login.html;
 
     location / {
-        try_files $uri $uri/ /dashboard.html;
+        try_files $uri $uri/ /login.html;
     }
 
     location /api/ {
